--- a/catalog.html
+++ b/catalog.html
@@ -54,6 +54,19 @@
     </ul>
     <h2 class="incognito">Фильтр товаров</h2>
     <h2 class="hammer-drils">Перфораторы</h2>
+    <p class="filter-title">Фильтр</p>
+    <p class="filter-label">Цена</p>
+    <!--Здесь будет форма или Javascript для слайдера-->
+
+    <div>
+        <p class="sort-title">Сортировка:</p>
+        <a class="label-title" href="#">По цене</a>
+        <a class="label-title" href="#">По типу</a>
+        <a class="label-title" href="#">По функционалу</a>
+        <!--Текст в классах "incognito будет скрыт"-->
+        <a class="incognito-title" href="#">Сортировка по возрастанию</a>
+        <a class="incognito-title" href="#">Сортировка по убыванию</a>
+    </div>
     <section class="filter-left">
     <ul class="made-by">
     <p>Производители</p>
@@ -200,9 +213,21 @@
        <p class="new-price">12500р</p>
        <a href="#">Купить</a>
    </li>
-        
      </ul>   
+     <ul class="pagination">
+        <li class="pagination-pages">1</li>
+        <li class="pagination-pages">2</li>
+        <li class="pagination-pages">3</li>
+        <li class="pagination-pages">Следующая</li>
+    </ul>
     </section>
+    <h2 class="few-words">Пара слов о перфораторах</h2>
+    <p class="about-drills">Перфоратор — универсальный строительный инструмент. 
+        Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. 
+        Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+        <br>В ассортиментном ряду есть выбор «трехрежимников»: в одном 
+        устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </main>
     <footer>
         <section section="footer-up">
