--- a/catalog.html
+++ b/catalog.html
@@ -9,13 +9,13 @@
 <body>
     <header class="header-page">
         <section class="header-top">
-        <a class="shop-logo">Техномарт</a>
+        <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
         <h1 class="incognito">Интернет-магазин Техномарт</h1>
         <form class="search-form">
-            <input type="search" value="Поиск">
+            <img src="img/icon-search.svg" alt="Иконка поиска" width="17" height="17"/><input type="search" placeholder="Поиск">
         </form>
-        <a href="#" class="bookmarks">Закладки:<span>0</span></a>
-        <a href="#" class="addtocart">Корзина:<span>10</span></a>
+        <a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17" height="17"/>Закладки:<span>0</span></a>
+        <a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17" height="17"/>Корзина:<span>10</span></a>
         <a href="#" class="makeanorder">Оформить заказ</a>
         </section>
     <section class="header-info">
@@ -26,7 +26,7 @@
             и инструментов для ремонта</p>
         </div>
         <div class="contacts-title">
-            <span class="fotter-number">+7 (812) 555-05-55</span>
+            <span class="fotter-number"><img src="img/icon-phone.svg" alt="Иконка телефона" width="19" height="19"> +7 (812) 555-05-55</span>
             <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="login-registration">
@@ -48,6 +48,7 @@
     </header>
     <main>
     <ul class="breadcrumbs-list">
+        <li><a href="index.html"><img src="img/icon-home.svg" alt="Иконка домой" width="14" height="12"></a></li>
         <li><a href="#">Каталог</li>
         <li><a href="#">Инструмент</li>
         <li><a href="#">Перфораторы</li>
@@ -92,7 +93,7 @@
                  </a>
              </h3>
              <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
+                 <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
              </a>
              <p class="old-price">22500p</p>
              <!--Старая цена будет зачеркнута через CSS-->
@@ -107,7 +108,7 @@
                 </a>
             </h3>
             <a href="catalog-item.html">
-                <img src="img/product-2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
+                <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
             </a>
             <p class="old-price">30500p</p>
             <!--Старая цена будет зачеркнута через CSS-->
@@ -122,7 +123,7 @@
                 </a>
             </h3>
             <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
             </a>
             <p class="new-price">12500р</p>
             <a href="#">Купить</a>
@@ -135,7 +136,7 @@
                 </a>
             </h3>
             <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
+                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
             </a>
             <p class="old-price">22500p</p>
             <!--Старая цена будет зачеркнута через CSS-->
@@ -150,7 +151,7 @@
                </a>
            </h3>
            <a href="catalog-item.html">
-               <img src="img/product-2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
+               <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
            </a>
            <p class="old-price">30500p</p>
            <!--Старая цена будет зачеркнута через CSS-->
@@ -165,7 +166,7 @@
                </a>
            </h3>
            <a href="catalog-item.html">
-               <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+               <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
            </a>
            <p class="new-price">12500р</p>
            <a href="#">Купить</a>
@@ -178,7 +179,7 @@
             </a>
         </h3>
         <a href="catalog-item.html">
-            <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
+            <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
         </a>
         <p class="old-price">22500p</p>
         <!--Старая цена будет зачеркнута через CSS-->
@@ -193,7 +194,7 @@
            </a>
        </h3>
        <a href="catalog-item.html">
-           <img src="img/product-2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
+           <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
        </a>
        <p class="old-price">30500p</p>
        <!--Старая цена будет зачеркнута через CSS-->
@@ -208,7 +209,7 @@
            </a>
        </h3>
        <a href="catalog-item.html">
-           <img src="img/product-1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+           <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
        </a>
        <p class="new-price">12500р</p>
        <a href="#">Купить</a>
@@ -231,7 +232,7 @@
     </main>
     <footer>
         <section section="footer-up">
-            <a class="shop-logo">Техномарт</a>
+            <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
         </section>
         <div class="footer-info">
             <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -241,7 +242,7 @@
             <ul class="bottom-nav">
                 <li><a href="#">Компания</a></li>
                 <li><a href="#">Новости</a></li>
-                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
@@ -258,9 +259,9 @@
             Все права защищены</p>
         <div class="social-networks">
             <ul>
-                <li><a href="#">Вконтакте</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="#"><img src="img/icon-vk.svg" width="26" height="15" alt="Вконтакте"></a></li>
+                <li><a href="#"><img src="img/icon-fb.svg" width="12" height="22" alt="Facebook"></a></li>
+                <li><a href="#"><img src="img/icon-insta.svg" width="21" height="21" alt="Instagram"></a></li>
             </ul>
         </div>
         <div class="academy-copyright">
