--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <header class="header-page">
             <section class="header-top">
-            <a class="shop-logo">Техномарт</a>
+            <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
             <h1 class="incognito">Интернет-магазин Техномарт</h1>
             <form class="search-form">
-                <input type="search" value="Поиск">
+                <img src="img/icon-search.svg" alt="Иконка поиска" width="17" height="17"/><input type="search" placeholder="Поиск">
             </form>
-            <a href="#" class="bookmarks">Закладки:<span>0</span></a>
-            <a href="#" class="addtocart">Корзина:<span>0</span></a>
+            <a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17" height="17"/>Закладки:<span>0</span></a>
+            <a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17" height="17"/>Корзина:<span>0</span></a>
             <a href="#" class="makeanorder">Оформить заказ</a>
             </section>
         <section class="header-info">
@@ -25,7 +25,7 @@
                 и инструментов для ремонта</p>
             </div>
             <div class="contacts-title">
-                <span class="fotter-number">+7 (812) 555-05-55</span>
+                <span class="fotter-number"><img src="img/icon-phone.svg" alt="Иконка телефона" width="19" height="19"> +7 (812) 555-05-55</span>
                 <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
             <div class="login-registration">
@@ -37,7 +37,7 @@
         <ul class="navigation">
         <li><a href="#">Главная</a></li>
         <li><a href="#">Компания</a></li> 
-        <li><a href="#">Каталог</a></li> 
+        <li><a href="catalog.html">Каталог</a></li> 
         <li><a href="#">Новости</a></li> 
         <li><a href="#">Спецпредложения</a></li> 
         <li><a href="#">Доставка</a></li> 
@@ -263,9 +263,10 @@
                 <a><img src="img/map.jpg" width="300" height="158" alt="карта проезда"></a>
                 <a href="#" class="feedback-us">Заблудились? Напишите нам!</a>
             </section>
+            </main>
             <footer>
             <section section="footer-up">
-                <a class="shop-logo">Техномарт</a>
+                <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
             </section>
             <div class="footer-info">
                 <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -292,9 +293,9 @@
                 Все права защищены</p>
             <div class="social-networks">
                 <ul>
-                    <li><a href="#">Вконтакте</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#"><img src="img/icon-vk.svg" width="26" height="15" alt="Вконтакте"></a></li>
+                    <li><a href="#"><img src="img/icon-fb.svg" width="12" height="22" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="img/icon-insta.svg" width="21" height="21" alt="Instagram"></a></li>
                 </ul>
             </div>
             <div class="academy-copyright">
@@ -307,6 +308,6 @@
             </div>
         </section>
         </footer>
-        </main>
+        
     </body>
 </html>
