Добавил недостаяющие изображения.
Добавил недостаяющие изображения в папку /img и разметил их в html.

--- a/catalog.html
+++ b/catalog.html
@@ -64,9 +64,8 @@
         <a class="label-title" href="#">По цене</a>
         <a class="label-title" href="#">По типу</a>
         <a class="label-title" href="#">По функционалу</a>
-        <!--Текст в классах "incognito будет скрыт"-->
-        <a class="incognito-title" href="#">Сортировка по возрастанию</a>
-        <a class="incognito-title" href="#">Сортировка по убыванию</a>
+        <button class="sort-by-increase"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Сортировка по возрастанию"></button>
+        <button class="sort-by-decrease"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Сортировка по убыванию"></button>
     </div>
     <section class="filter-left">
     <ul class="made-by">
