--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                       <h3>Материалы</h3>
                       <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
                       <a class="materials" href="#">На любой вкус</a>
+                      <img src="img/new-flag.png" width="60" height="59" alt="Новинка">
                     </article>
                   </li>
                   <li>
@@ -87,12 +88,16 @@
                       <div class="slider">
                           <h2>ДРЕЛИ</h2>
                           <p>Соседям на радость!</p>
-                          <img src="img/slider-image.jpg" width="620" height="266" alt="Drills">
+                          <img src="img/slide-image.jpg" width="620" height="266" alt="Фотография строителя с дрелью">
+                           <!--Ниже разметка на то время, когда слайдер будет работать-->
+                          <!-- <img src="img/slide-image2.jpg" width="620" height="266" alt="Фотография строителя с дрелью">
+                            <h2>Перфораторы</h2>
+                            <p>Настоящие мужские игрушки</p> -->
+                            <button class="left" type="button">
+                              <img src="img/icon-left.svg" width="22" height="40" alt="Налево">
+                            </button>
                           <button class="right" type="button">
                             <img src="img/icon-right.svg" width="22" height="40" alt="Направо">
-                          </button>
-                          <button class="left" type="button">
-                            <img src="img/icon-left.svg" width="22" height="40" alt="Налево">
                           </button>
                           <a href="catalog.html">Открыть каталог</a>   
                       </div>
@@ -112,7 +117,7 @@
                           </h3>
                           <p>
                               <a href="catalog-item.html">
-                                <img src="img/item-image.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                                <img src="img/item3.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                               </a>
                           </p>
                           <p class="old-price">32500 Р.</p>
@@ -132,7 +137,7 @@
                           </h3>
                           <p>
                               <a href="catalog-item.html">
-                                <img src="img/item-image.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                                <img src="img/item1.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                               </a>
                           </p>
                           <p class="old-price">22500 Р.</p>
@@ -152,7 +157,7 @@
                           </h3>
                           <p>
                               <a href="catalog-item.html">
-                                <img src="img/item-image.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                                <img src="img/item2.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                               </a>
                           </p>
                           <p class="old-price">30500 Р.</p>
@@ -172,7 +177,8 @@
                           </h3>
                           <p>
                               <a href="catalog-item.html">
-                                <img src="img/item-image.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                                <img src="img/item1.jpg"  width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
+                                <img src="img/new-flag.png" width="60" height="59" alt="Новинка">
                               </a>
                           </p>
                           <a class="paybutton" href="#">
