--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="style.css"/>
@@ -11,7 +11,8 @@
             <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
             <h1 class="incognito">Интернет-магазин Техномарт</h1>
             <form class="search-form">
-                <img src="img/icon-search.svg" alt="Иконка поиска" width="17" height="17"/><input type="search" placeholder="Поиск">
+                <img src="img/icon-search.svg" alt="Иконка поиска" width="17" height="17"/>
+                <input type="search" name="search" placeholder="Поиск">
             </form>
             <a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17" height="17"/>Закладки:<span>0</span></a>
             <a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17" height="17"/>Корзина:<span>0</span></a>
@@ -47,6 +48,7 @@
         </header>
         <main>
             <section class="colored-blocks">
+              <h3 class="incognito">Товары</h3>
                 <ul>
                   <li class="new-materials">
                     <article>
@@ -122,11 +124,13 @@
                           </p>
                           <p class="old-price">32500 Р.</p>
                           <!--Старые цены-->
-                          <a class="paybutton" href="#">
+                          <div class="incognito">
+                            <button type="button">Купить</button>
+                            <button type="button">В закладки</button>
+                          </div>
                             <p class="new-price">
-                              <b>25500 Р.</b>
+                              <button><b>25500 Р.</b></button>
                             </p>
-                          </a>
                         </li>
                         <li>
                           <h3>
@@ -241,11 +245,37 @@
                   Хороший интернет-магазин отличается от плохого не только ценами! <br>
                   Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
                 </p>
-                <!--Тут будет форма-->
                 <ul>
-                  <li>Доставка</li>
-                  <li>Гарантия</li>
-                  <li>Кредит</li>
+                  <li><button>Доставка</button</li>
+                  <li><button>Гарантия</button</li>
+                  <li><button>Кредит</button</li>
+                  </ul>
+                  <ul class="service-selection">
+                    <li>
+                  <h3>Доставка</h3>
+                  <p>
+                  Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду
+                  </p> 
+                  </li>
+                  <li>
+                  <h3>Гарантия</h3>
+                    <p>
+                    Если купленный у нас товар поломается или заискрит, <br>
+                   а также в случае пожара, спровоцированного его возгоранием,<br>
+                   вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
+                   сгоревший товар на новый.<br>
+                   Дом уж восстановите как-нибудь сами.<br>
+                   </p>
+                  </li>
+                  <li>
+                  <h3>Кредит</h3>
+                   <p>
+                    Залезть в долговую яму стало проще!<br>
+                    Кредитные консультанты придут вам на помощь.
+                    </p>
+                   <a class="button" href="#">Отправить заявку</a> 
+                  </li>
                 </ul>
               </section>
             <section class="about-us">
@@ -268,12 +298,24 @@
                 заехав в наш офис:</p>
                 <a><img src="img/map.jpg" width="300" height="158" alt="карта проезда"></a>
                 <a href="#" class="feedback-us">Заблудились? Напишите нам!</a>
+                <!--Ниже div для всплывающего окна формы связи-->
+                <div class="incognito-form-contacts">
+                  <form class="contact-to-us">
+                    <label for="yourname">Ваше имя:</label><br>
+                      <input type="text" name="yourname" id="yourname" placeholder="Имя Фамилия"><br>
+                    <label for="your-email">Ваш e-mail:</label><br>
+                      <input type="email" name="your-email" id="your-email" placeholder="email@example.com"><br>
+                    <label for="your-text">Текст письма:</label> <br>
+                    <textarea name="your-text" id="your-text" rows="10" cols="50">В свободной форме</textarea>
+                    <button type="submit">Отправить</button>
+                    </form>
+                </div>
             </section>
             </main>
             <footer>
-            <section section="footer-up">
+            <section class="footer-up">
+              <h3 class="incognito">Информация о компании</h3>
                 <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
-            </section>
             <div class="footer-info">
                 <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                 <span class="fotter-number">+7 (812) 555-05-55</span>
@@ -309,7 +351,7 @@
                 <a class="gold-text" href="#">mail@htmlacademy.ru</a>
                 </p>
                 <p class="made-by">Разработано — <br>
-                <a class="gold-text">htmlacademy.ru</a>
+                <a class="gold-text" href="http://htmlacademy.ru">htmlacademy.ru</a>
                 </p>
             </div>
         </section>
