--- a/catalog.html
+++ b/catalog.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Интернет-магазин Техномарт</title>
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum|PT+Sans&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="catalog-page">
     <header class="header-page">
         <section class="header-top">
         <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
         <h1 class="incognito">Интернет-магазин Техномарт</h1>
-        <form class="search-form">
+        <form class="header-search">
             <img src="img/icon-search.svg" alt="Иконка поиска" width="17" height="17"/>
             <input type="search" name="search" placeholder="Поиск">
         </form>
-        <a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17" height="17"/>Закладки:<span>0</span></a>
-        <a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17" height="17"/>Корзина:<span>10</span></a>
-        <a href="#" class="makeanorder">Оформить заказ</a>
+        <ul class="header-top-menu">
+         <li><a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17" height="17"/>Закладки:<span>0</span></a></li>
+         <li><a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17" height="17"/>Корзина:<span>0</span></a></li>
+         <li><a href="#" class="make-order">Оформить заказ</a></li>
+        </ul>
         </section>
     <section class="header-info">
         <h2 class="incognito">Контакты</h2>
@@ -27,25 +32,25 @@
             и инструментов для ремонта</p>
         </div>
         <div class="contacts-title">
-            <span class="fotter-number"><img src="img/icon-phone.svg" alt="Иконка телефона" width="19" height="19"> +7 (812) 555-05-55</span>
+            <span class="footer-number"><img src="img/icon-phone.svg" alt="Иконка телефона" width="19" height="19"> +7 (812) 555-05-55</span>
             <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
-        <div class="login-registration">
+        <div class="cite-login">
         <a class="footer-sign" href="#">Войти</a>
         <a class="footer-reg" href="#">Регистрация</a>
         <!--
-            <ul class="auth-user-navigation">
-                <li><a href="#">Мои заказы</a></li>
-                <li><a href="#">Личный кабинет</a></li>
-            </ul>
-        -->
+        <ul class="auth-user-navigation">
+            <li><a href="#">Мои заказы</a></li>
+            <li><a href="#">Личный кабинет</a></li>
+        </ul>
+    -->
         </div>
     </section>
-    <nav class="header-nav">
+    <nav class="header-bottom">
     <ul class="navigation">
-    <li><a href="index.html">Главная</a></li>
+    <li><a href="#">Главная</a></li>
     <li><a href="#">Компания</a></li> 
-    <li><a href="#">Каталог</a></li> 
+    <li><a href="catalog.html">Каталог</a></li> 
     <li><a href="#">Новости</a></li> 
     <li><a href="#">Спецпредложения</a></li> 
     <li><a href="#">Доставка</a></li> 
@@ -61,11 +66,9 @@
         <li><a href="#">Перфораторы</a></li>
     </ul>
     <h2 class="incognito">Фильтр товаров</h2>
-    <h2 class="hammer-drils">Перфораторы</h2>
-    <p class="filter-title">Фильтр</p>
-    <p class="filter-label">Цена</p>
-    <div>
-        <p class="sort-title">Сортировка:</p>
+    <h2 class="hammer-drills">Перфораторы</h2>
+    <div class="filter-block">
+        <p class="filter-title">Сортировка:</p>
         <button class="label-title">По цене</button>
         <button class="label-title">По типу</button>
         <button class="label-title">По функционалу</button>
@@ -73,17 +76,16 @@
         <button class="sort-by-decrease"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Сортировка по убыванию"></button>
     </div>
     <section class="filter-left">
-        <h2 class="hammer-drils">Перфораторы</h2>
         <h2 class="incognito">Фильтр товаров</h2>
         <p class="filter-title">Фильтр</p>
-        <label for="range-of-price">Цена:</label>
+        <label for="range-of-price" class="filter-sort">Цена:</label>
         <form class="form-pricerange">
           <input type="range" name="range-of-price" id="range-of-price" min="0" max="30000" step="1">
         </form>
         <p>0 - 30000</p>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
-            <legend>Производители:</legend>
+            <legend class="filter-sort">Производители:</legend>
         <ul class="manufacturers">
           <li>
             <input type="checkbox" name="bosch" id="bosch" checked>
@@ -118,7 +120,7 @@
         </ul>
           </fieldset>
           <fieldset>
-            <legend>Питание:</legend>
+            <legend class="filter-sort">Питание:</legend>
         <ul class="Nutrition">
           <li>
             <input type="radio" name="pitanie" value="accum" id="accum">
@@ -138,17 +140,17 @@
       </form>
       </section>
     <section class="items">
-     <ul>
-         <li>
-             <h3>
-                 <a href="catalog-item.html">
-                     <span>Перфоратор BOSCH</span>
-                     <span>BFG 3000</span>
-                 </a>
-             </h3>
+     <ul class="catalog-list">
+         <li class="catalog-item">
              <a href="catalog-item.html">
                  <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
              </a>
+             <h3>
+                <a href="catalog-item.html">
+                    <span>Перфоратор BOSCH</span>
+                    <span>BFG 3000</span>
+                </a>
+            </h3>
              <p class="old-price">22500p</p>
              <!--Старая цена будет зачеркнута через CSS-->
              <p class="new-price">15500р</p>
@@ -157,16 +159,16 @@
                 <a class="add-to-bookmarks">В закладки</a>
               </div>
          </li>
-         <li>
+         <li class="catalog-item">
+            <a href="catalog-item.html">
+                <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
+            </a>
             <h3>
                 <a href="catalog-item.html">
                     <span>Перфоратор BOSCH</span>
                     <span>BFG 6000</span>
                 </a>
             </h3>
-            <a href="catalog-item.html">
-                <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
-            </a>
             <p class="old-price">30500p</p>
             <!--Старая цена будет зачеркнута через CSS-->
             <p class="new-price">25500р</p>
@@ -175,32 +177,32 @@
                 <a class="add-to-bookmarks">В закладки</a>
               </div>
         </li>
-        <li>
+        <li class="catalog-item">
+            <a href="catalog-item.html">
+                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
+            </a>
             <h3>
                 <a href="catalog-item.html">
                     <span>Перфоратор BOSCH</span>
                     <span>BFG 2000</span>
                 </a>
             </h3>
-            <a href="catalog-item.html">
-                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
-            </a>
             <p class="new-price">12500р</p>
             <div class="incognito">
                 <a class="add-to-cart">Купить</a>
                 <a class="add-to-bookmarks">В закладки</a>
               </div>
         </li>
-        <li>
+        <li class="catalog-item">
+            <a href="catalog-item.html">
+                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
+            </a>
             <h3>
                 <a href="catalog-item.html">
                     <span>Перфоратор BOSCH</span>
                     <span>BFG 3000</span>
                 </a>
             </h3>
-            <a href="catalog-item.html">
-                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
-            </a>
             <p class="old-price">22500p</p>
             <!--Старая цена будет зачеркнута через CSS-->
             <p class="new-price">15500р</p>
@@ -209,16 +211,16 @@
                 <a class="add-to-bookmarks">В закладки</a>
               </div>
         </li>
-        <li>
-           <h3>
-               <a href="catalog-item.html">
-                   <span>Перфоратор BOSCH</span>
-                   <span>BFG 6000</span>
-               </a>
-           </h3>
+        <li class="catalog-item">
            <a href="catalog-item.html">
                <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
            </a>
+           <h3>
+            <a href="catalog-item.html">
+                <span>Перфоратор BOSCH</span>
+                <span>BFG 6000</span>
+            </a>
+           </h3>
            <p class="old-price">30500p</p>
            <!--Старая цена будет зачеркнута через CSS-->
            <p class="new-price">25500р</p>
@@ -227,32 +229,32 @@
             <a class="add-to-bookmarks">В закладки</a>
           </div>
        </li>
-       <li>
-           <h3>
-               <a href="catalog-item.html">
-                   <span>Перфоратор BOSCH</span>
-                   <span>BFG 2000</span>
-               </a>
-           </h3>
+       <li class="catalog-item">
            <a href="catalog-item.html">
                <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
            </a>
+           <h3>
+            <a href="catalog-item.html">
+                <span>Перфоратор BOSCH</span>
+                <span>BFG 2000</span>
+            </a>
+           </h3>
            <p class="new-price">12500р</p>
            <div class="incognito">
             <a class="add-to-cart">Купить</a>
             <a class="add-to-bookmarks">В закладки</a>
           </div>
        </li>
-       <li>
+       <li class="catalog-item">
+        <a href="catalog-item.html">
+            <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
+        </a>
         <h3>
             <a href="catalog-item.html">
                 <span>Перфоратор BOSCH</span>
                 <span>BFG 3000</span>
             </a>
         </h3>
-        <a href="catalog-item.html">
-            <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
-        </a>
         <p class="old-price">22500p</p>
         <!--Старая цена будет зачеркнута через CSS-->
         <p class="new-price">15500р</p>
@@ -261,16 +263,16 @@
             <a class="add-to-bookmarks">В закладки</a>
           </div>
     </li>
-    <li>
-       <h3>
-           <a href="catalog-item.html">
-               <span>Перфоратор BOSCH</span>
-               <span>BFG 6000</span>
-           </a>
-       </h3>
+    <li class="catalog-item">
        <a href="catalog-item.html">
            <img src="img/item2.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 6000">
        </a>
+       <h3>
+            <a href="catalog-item.html">
+            <span>Перфоратор BOSCH</span>
+            <span>BFG 6000</span>
+            </a>
+       </h3>
        <p class="old-price">30500p</p>
        <!--Старая цена будет зачеркнута через CSS-->
        <p class="new-price">25500р</p>
@@ -279,30 +281,33 @@
         <a class="add-to-bookmarks">В закладки</a>
       </div>
    </li>
-   <li>
-       <h3>
-           <a href="catalog-item.html">
-               <span>Перфоратор BOSCH</span>
-               <span>BFG 2000</span>
-           </a>
-       </h3>
+   <li class="catalog-item">
        <a href="catalog-item.html">
            <img src="img/item1.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
        </a>
+       <h3>
+        <a href="catalog-item.html">
+            <span>Перфоратор BOSCH</span>
+            <span>BFG 2000</span>
+        </a>
+        </h3>
        <p class="new-price">12500р</p>
        <div class="incognito">
         <a class="add-to-cart">Купить</a>
         <a class="add-to-bookmarks">В закладки</a>
       </div>
    </li>
-     </ul>   
-     <ul class="pagination">
+     </ul>  
+    </section>
+    <div class="pagination">
+     <ul class="pagination-list">
         <li class="pagination-pages">1</li>
         <li class="pagination-pages">2</li>
         <li class="pagination-pages">3</li>
         <li class="pagination-pages">Следующая</li>
     </ul>
-    </section>
+    </div> 
+    <section class="epilogue">
     <h2 class="few-words">Пара слов о перфораторах</h2>
     <p class="about-drills">Перфоратор — универсальный строительный инструмент. 
         Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
@@ -310,6 +315,7 @@
         Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
         <br>В ассортиментном ряду есть выбор «трехрежимников»: в одном 
         устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+    </section>
     </main>
     <footer>
         <section class="footer-up">
