--- a/catalog.html
+++ b/catalog.html
@@ -324,7 +324,7 @@
         
         <div class="footer-info">
             <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <span class="fotter-number">+7 (812) 555-05-55</span>
+            <span class="footer-number">+7 (812) 555-05-55</span>
         </div>
         <div class="footer-nav">
             <ul class="bottom-nav">
